// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/branch/lock-files determineLockFileDirs returns all directories if lock file maintenance 1`] = `
Object {
  "packageLockFileDirs": Array [
    "backend",
  ],
  "shrinkwrapYamlDirs": Array [
    "frontend",
  ],
  "yarnLockFileDirs": Array [
    ".",
  ],
}
`;

exports[`workers/branch/lock-files determineLockFileDirs returns directories from updated package files 1`] = `
Object {
  "lernaDirs": Array [],
  "packageLockFileDirs": Array [
    "backend",
  ],
  "shrinkwrapYamlDirs": Array [
    "frontend",
  ],
  "yarnLockFileDirs": Array [
    ".",
  ],
}
`;

exports[`workers/branch/lock-files determineLockFileDirs returns root directory if using lerna package lock 1`] = `
Object {
  "lernaDirs": Array [
    ".",
  ],
  "packageLockFileDirs": Array [],
  "shrinkwrapYamlDirs": Array [],
  "yarnLockFileDirs": Array [],
}
`;

exports[`workers/branch/lock-files determineLockFileDirs returns root directory if using yarn workspaces 1`] = `
Object {
  "lernaDirs": Array [],
  "packageLockFileDirs": Array [],
  "shrinkwrapYamlDirs": Array [],
  "yarnLockFileDirs": Array [
    ".",
  ],
}
`;

exports[`workers/branch/lock-files getUpdatedLockFiles returns no error and empty lockfiles if lock file maintenance exists 1`] = `
Object {
  "lockFileErrors": Array [],
  "updatedLockFiles": Array [],
}
`;

exports[`workers/branch/lock-files getUpdatedLockFiles returns no error and empty lockfiles if none updated 1`] = `
Object {
  "lockFileErrors": Array [],
  "updatedLockFiles": Array [],
}
`;

exports[`workers/branch/lock-files getUpdatedLockFiles tries lerna npm 1`] = `
Object {
  "lockFileErrors": Array [],
  "updatedLockFiles": Array [],
}
`;

exports[`workers/branch/lock-files getUpdatedLockFiles tries lerna yarn 1`] = `
Object {
  "lockFileErrors": Array [
    Object {
      "lockFile": "yarn.lock",
      "stderr": undefined,
    },
  ],
  "updatedLockFiles": Array [],
}
`;

exports[`workers/branch/lock-files getUpdatedLockFiles tries multiple lock files 1`] = `
Object {
  "lockFileErrors": Array [],
  "updatedLockFiles": Array [],
}
`;
